[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UIScript/TextTimelinerScript.gd" type="Script" id=1]

[node name="TextTimeliner" type="Area2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="." to="." method="_on_TextTimeliner_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_TextTimeliner_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
